# VoxPop

./: README.md  pyproject.toml
app/: main.py  repository.py
templates/: base.html  style.css
templates/main/: categories.html  feeds.html  form.html  index.html
