[tool.poetry]
name = "project-1-fastapi"
version = "0.1.0"
description = ""
authors = ["dinmukhammed <arystambekdimash@gmail.com>"]
readme = "README.md"
packages = [{include = "project_1_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
jinja2 = "^3.1.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
